# animatronic

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: test.yaml
app/: __init__.py  __main__.py  state.py  window.py
app/components/: __init__.py  arduino.py  audio.py  servo.py
app/core/: config.py  constants.py
app/utils/: arduino.py  maths.py  ui.py
arduino/: animatronic.ino
