[tool.poetry]
name = "animatronic"
version = "0.1.0"
description = "Awesome animatronic created by rmenai"
authors = ["rmenai"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
librosa = "^0.9.1"
pygame = "^2.1.2"
pyserial = "^3.5"
taskipy = "^1.10.1"
numba = "0.49.1"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
colorlog = "^6.5.0"
coverage = "^6.3.2"
flake8 = "^4.0.1"
flake8-annotations = "^2.6.2"
flake8-bugbear = "^22.1.11"
flake8-docstrings = "^1.6.0"
flake8-isort = "^4.1.1"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.6.0"
flake8-todo = "^0.7"
pep8-naming = "^0.12.1"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
python-dotenv = "^0.20.0"
pyinstaller = "^5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "python -m app"
test = "coverage run -m pytest tests/"
report = "coverage report"
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
